View setup meeting

--- a/assets/question.html
+++ b/assets/question.html
@@ -1,101 +1,105 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Vote | Elliv</title>
-        <meta charset="utf-8" />
-        <link type="text/css" rel="stylesheet" href="styles.css" />
-    </head>
-    <body class="questions-page">
-        <header id="vote-header">
-            <h1 id="logo">
-                <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
-            </h1>
-            <h2>Unsung Hero</h2>
-            <p class="description">You've chosen. Here's the top three duos on campus that have a little more than their faith in common.</p>
-            <span id="click-msg">Click the names to read more!</span>
-        </header>
-        <section id="vote-main">
-                <ul id="nominee-list">
-                    <li id="nominee1" class="nominee">
-                      <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
-                       <div class="nominee-header">
-                            <a href="#" class="nominee-title">Rebecca Adams</a>
-                            <img src="images/arrow-01.png" class="dropdown-arrow" />
-                        </div>
-                        <div class="nominee-description">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <span class="close">&times;</span>
-                              </div>
-                               <img src="images/Elliv_UnsungHero_RebeccaAdams.jpg" />
-                               <h2>Rebecca Adams</h2>
-                                <p>&ldquo;She tirelessly serves her team is always willing to help you with whatever you need, even if she doesn't really have the time to give. She sacrifices her time for the good of others.&rdquo;
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li id="nominee2" class="nominee">
-                      <a href="#" class="nominee-vote" id="nominee2" title="Click to vote for this nominee">Vote here</a>
-                       <div class="nominee-header">
-                            <a href="#" class="nominee-title">Ashlynn Kelly &amp; Kathryn Dougherty</a>
-                            <img src="images/arrow-01.png" class="dropdown-arrow" />
-                        </div>
-                        <div class="nominee-description">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <span class="close">&times;</span>
-                              </div>
-                               <img src="images/Elliv_StdFacLookAlike_.jpg" />
-                               <h2>Ashlynn Kelly &amp; Kathryn Dougherty</h2>
-                                <p>&ldquo;I've seen him serve again and again; I've seen how he stops whatever he is doing to listen to me and others, to go do something for someone, and to go out of his way to give and be there for people.&rdquo;
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li id="nominee3" class="nominee">
-                       <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
-                        <div class="nominee-header">
-                            <a href="#" class="nominee-title">Sarah Berman, Micah Bernard, &amp; Megan Lawrence</a>
-                            <img src="images/arrow-01.png" class="dropdown-arrow" />
-                        </div>
-                        <div class="nominee-description">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <span class="close">&times;</span>
-                              </div>
-                               <img src="images/Elliv_CedarvilleStar_SBMBML.jpg" />
-                               <h2>Sarah Berman, Micah Bernard, &amp; Megan Lawrence</h2>
-                                <p>Pharmacy Research Challenge, in the top 40 of the nation. 
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-        </section>
-        <footer id="vote-footer">
-            <ul id="vote-nav">
-               <li id="back-btn" class="nav-btn">
-                    <a href="#">&laquo; Back</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page on-page" title="page-1">Page 1</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page" title="page-2">Page 2</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page" title="page-3">Page 3</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page" title="page-4">Page 4</a>
-                </li>
-                <li id="next-btn" class="nav-btn">
-                    <a href="#">Next &raquo;</a>
-                </li>
-            </ul>
-        </footer>
-        <div class="shade"></div>
-    </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="vote.js"></script>
+<head>
+    <title>Vote | Elliv</title>
+    <meta charset="utf-8"/>
+    <link type="text/css" rel="stylesheet" href="styles.css"/>
+</head>
+<body class="questions-page">
+<header id="vote-header">
+    <h1 id="logo">
+        <img src="images/NEWGOLDE.png" alt="Elliv Logo"/>
+    </h1>
+    <h2>Unsung Hero</h2>
+    <p class="description">You've chosen. Here's the top three duos on campus that have a little more than their faith
+        in common.</p>
+    <span id="click-msg">Click the names to read more!</span>
+</header>
+<section id="vote-main">
+    <ul id="nominee-list">
+        <li id="nominee1" class="nominee">
+            <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
+            <div class="nominee-header">
+                <a href="#" class="nominee-title">Rebecca Adams</a>
+                <img src="images/arrow-01.png" class="dropdown-arrow"/>
+            </div>
+            <div class="nominee-description">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <span class="close">&times;</span>
+                    </div>
+                    <img src="images/Elliv_UnsungHero_RebeccaAdams.jpg"/>
+                    <h2>Rebecca Adams</h2>
+                    <p>&ldquo;She tirelessly serves her team is always willing to help you with whatever you need, even
+                        if she doesn't really have the time to give. She sacrifices her time for the good of others.&rdquo;
+                    </p>
+                </div>
+            </div>
+        </li>
+        <li id="nominee2" class="nominee">
+            <a href="#" class="nominee-vote" id="nominee2" title="Click to vote for this nominee">Vote here</a>
+            <div class="nominee-header">
+                <a href="#" class="nominee-title">Ashlynn Kelly &amp; Kathryn Dougherty</a>
+                <img src="images/arrow-01.png" class="dropdown-arrow"/>
+            </div>
+            <div class="nominee-description">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <span class="close">&times;</span>
+                    </div>
+                    <img src="images/Elliv_StdFacLookAlike_.jpg"/>
+                    <h2>Ashlynn Kelly &amp; Kathryn Dougherty</h2>
+                    <p>&ldquo;I've seen him serve again and again; I've seen how he stops whatever he is doing to listen
+                        to me and others, to go do something for someone, and to go out of his way to give and be there
+                        for people.&rdquo;
+                    </p>
+                </div>
+            </div>
+        </li>
+        <li id="nominee3" class="nominee">
+            <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
+            <div class="nominee-header">
+                <a href="#" class="nominee-title">Sarah Berman, Micah Bernard, &amp; Megan Lawrence</a>
+                <img src="images/arrow-01.png" class="dropdown-arrow"/>
+            </div>
+            <div class="nominee-description">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <span class="close">&times;</span>
+                    </div>
+                    <img src="images/Elliv_CedarvilleStar_SBMBML.jpg"/>
+                    <h2>Sarah Berman, Micah Bernard, &amp; Megan Lawrence</h2>
+                    <p>Pharmacy Research Challenge, in the top 40 of the nation.
+                    </p>
+                </div>
+            </div>
+        </li>
+    </ul>
+</section>
+<footer id="vote-footer">
+    <ul id="vote-nav">
+        <li id="back-btn" class="nav-btn">
+            <a href="#">&laquo; Back</a>
+        </li>
+        <li class="nav-btn">
+            <a href="#" class="nominee-page on-page" title="page-1">Page 1</a>
+        </li>
+        <li class="nav-btn">
+            <a href="#" class="nominee-page" title="page-2">Page 2</a>
+        </li>
+        <li class="nav-btn">
+            <a href="#" class="nominee-page" title="page-3">Page 3</a>
+        </li>
+        <li class="nav-btn">
+            <a href="#" class="nominee-page" title="page-4">Page 4</a>
+        </li>
+        <li id="next-btn" class="nav-btn">
+            <a href="#">Next &raquo;</a>
+        </li>
+    </ul>
+</footer>
+<div class="shade"></div>
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="vote.js"></script>
 </html>
