--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Welcome | Elliv</title>
-        <meta charset="utf-8" />
-        <link type="text/css" rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <header id="vote-header">
-            <h1 id="logo">
-                <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
-            </h1>
-            <h2>Welcome to the Elliv 2017 Poll!</h2>
-        </header>
+<head>
+    <title>Welcome | Elliv</title>
+    <meta charset="utf-8"/>
+    <link type="text/css" rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+<header id="vote-header">
+    <h1 id="logo">
+        <img src="images/NEWGOLDE.png" alt="Elliv Logo"/>
+    </h1>
+    <h2>Welcome to the Elliv 2017 Poll!</h2>
+</header>
 <section class="poll-welcome" id="vote-main">
     <a class="link-admin" href="/admin/">Admin Panel</a>
 
     <div class="intro">
-        This is the portal that will take you to the Elliv 2017 poll. Vote for your fellow Cedarville students for their chance to be on stage during Elliv to recieve an award!
+        This is the portal that will take you to the Elliv 2017 poll. Vote for your fellow Cedarville students for their
+        chance to be on stage during Elliv to recieve an award!
     </div>
     <a class="btn vote-btn" href="/poll/question/{poll_id}/1">Vote Now</a>
-        </section>
+</section>
 </body>
 </html>
